--- a/research.tex
+++ b/research.tex
@@ -92,7 +92,7 @@ Building on PtychoPINN's foundation, I propose two technical directions that wil
 \subsubsection{Variational Methods for Diffractive Imaging}
 Probabilistic neural networks are an important development direction in scientific machine learning because they allow better modeling of stochasticities -- a special desideratum at LCLS, given the extent of shot-to-shot fluctuations -- and uncertainty quantification. PtychoPINN is currently aware of aleatoric uncertainty but lacks any estimation of epistemic uncertainties; it also neglects beam jitter. 
 
-One of my collaborators, Aashwin Mishra (SLAC ML Initiative), has already spearheaded the development of probabilistic neural networks (PNNs) to tackle the problem of epistemic uncertainty in ML models for coherent diffractive imaging. Drawing on his current efforts and my recent work developing variational and sampling-based inference methods for spectral unmixing, we plan to incorporate probabilistic techniques into PtychoPINN for improved interpretability and quantification of out-of-distribution robustness. \cite{hoidn2024probabilistic}
+One of my collaborators, Aashwin Mishra (SLAC ML Initiative), has already spearheaded the development of probabilistic neural networks (PNNs) to tackle the problem of epistemic uncertainty and principled uncertainty quantification in ML models for coherent diffractive imaging. Drawing on his current efforts we plan to incorporate probabilistic techniques into PtychoPINN for improved interpretability and quantification of out-of-distribution robustness. \cite{hoidn2024probabilistic}
 
 Furthermore, using variational autoencoders (VAEs) we could learn compact, physically meaningful representations of the complex-valued illumination in coherent imaging experiments. I propose to develop a model that jointly learns Zernike coefficients characterizing the beam illumination function jointly with phase retrieval. The VAE would provide an invertible map from the latent space to a function space of beam illumination profiles, providing a physically interpretable way to correct for shot-to-shot variation in the probe. Prior work on steerable PCA for cryo-EM has shown that such parametrizations are remarkably efficient embeddings of the illumination function. \cite{zhao2016fast}
 
