refactoring; build out compiler and task interface

--- a/textonly.tex
+++ b/textonly.tex
@@ -396,178 +396,7 @@ class TaskStructure:
     subtasks: list['TaskStructure'] = None
     parameters: Optional[Dict[str, str]] = None
 
-%class XMLTaskParser:
-%    """Parses XML task descriptions into structured form"""
-%    
-%    def parse_task(self, xml: Element) -> TaskStructure:
-%        """Parse XML into TaskStructure
-%        
-%        Handles both atomic tasks and decompositions.
-%        
-%        Args:
-%            xml: XML element representing task
-%            
-%        Returns:
-%            Parsed task structure
-%        """
-%        task_type = TaskType(xml.get('type', 'atomic'))
-%        description = xml.find('description').text
-%        
-%        # Handle parameters if present
-%        params = {}
-%        params_elem = xml.find('parameters')
-%        if params_elem is not None:
-%            for param in params_elem:
-%                params[param.get('name')] = param.text
-%                
-%        # Handle subtasks for non-atomic tasks
-%        subtasks = []
-%        if task_type != TaskType.ATOMIC:
-%            for subtask in xml.findall('subtask'):
-%                subtasks.append(self.parse_task(subtask))
-%        
-%        return TaskStructure(
-%            type=task_type,
-%            description=description,
-%            subtasks=subtasks if subtasks else None,
-%            parameters=params if params else None
-%        )
-%
-%    def task_to_ast(self, task: TaskStructure) -> ASTNode:
-%        """Convert parsed task structure to AST
-%        
-%        Maps task types to appropriate AST structures:
-%        - ATOMIC -> single node
-%        - MAP -> parallel execution structure
-%        - REDUCE -> result combination structure
-%        - SEQUENCE -> sequential execution structure
-%        
-%        Args:
-%            task: Parsed task structure
-%            
-%        Returns:
-%            Corresponding AST node
-%        """
-%        operator = Operator(
-%            type=task.type.value,
-%            task=task.description,
-%            params=task.parameters
-%        )
-%        
-%        if task.type == TaskType.ATOMIC:
-%            return ASTNode(operator=operator, args=[])
-%            
-%        # For non-atomic tasks, recursively convert subtasks
-%        return ASTNode(
-%            operator=operator,
-%            args=[self.task_to_ast(subtask) for subtask in task.subtasks]
-%        )
 
-class Compiler:
-    def __init__(self, task_system: TaskSystem):
-        self.task_system = task_system
-        self.parser = XMLTaskParser()
-
-    def compile(self, query: str) -> ASTNode:
-        """Initial compilation of natural language to AST
-        
-        Args:
-            query: Natural language query from user
-            
-        Returns:
-            ASTNode: Root node of compiled AST
-        """
-        # Generate structured task description
-        xml = self.llm_translate(query)
-        
-        # Parse into intermediate task structure
-        task_structure = self.parser.parse_task(xml)
-        
-        # Convert to AST
-        return self.parser.task_to_ast(task_structure)
-
-    def reparse(self, 
-                failed_task: str,
-                error: ExecutionError,
-                env: Environment) -> ASTNode:
-        """Generate new AST nodes when execution fails
-        
-        Creates new task decomposition based on error type and context.
-        
-        Args:
-            failed_task: Description of task that failed
-            error: Details about the failure
-            env: Current execution environment
-            
-        Returns:
-            ASTNode: New AST subtree to try executing
-            
-        Raises:
-            ExecutionError: If reparsing itself fails
-        """
-        # TODO the reparsing prompt shouldn't be exposed to the compiler. 
-        # Instead it should construct a specialized Operator for reparsing 
-        # And then execute it via Evaluator.execute_llm() (or whatever we're 
-        # calling the method that has that responsibility
-
-        # Get specialized prompt for reparsing
-        reparse_prompt = self._get_reparse_prompt(failed_task, error)
-        
-        # Generate new task structure via LLM
-        xml = self.llm_translate(reparse_prompt)
-        
-        # Parse into intermediate structure
-        task_structure = self.parser.parse_task(xml)
-        
-        # Convert to AST
-        node = self.parser.task_to_ast(task_structure)
-        
-        # Validate before returning
-        self._validate_reparse(node, error)
-        
-        return node
-
-    def _get_reparse_prompt(self, task: str, error: ExecutionError) -> str:
-        """Get appropriate reparse prompt based on error type"""
-        # TODO the reparsing prompt shouldn't be exposed to the compiler. 
-        # Instead it should construct a specialized Operator for reparsing. 
-        # If we really need to track the error type, then it should be an 
-        # attribute of that specialized Operator
-        if error.type == ErrorType.RESOURCE_EXHAUSTED:
-            return self.task_system.get_decomposition_prompt(
-                task,
-                error.details["resource"]
-            )
-        elif error.type == ErrorType.TASK_FAILED:
-            return self.task_system.get_alternative_prompt(
-                task,
-                error.details["reason"]
-            )
-        else:
-            raise ExecutionError.invalid_reparse(
-                task=task,
-                validation_error="Unsupported error type for reparsing"
-            )
-
-    def _validate_reparse(self, node: ASTNode, error: ExecutionError) -> None:
-        """Validate reparsed AST is acceptable
-        
-        TODO: Implement validation logic:
-        - Check structure is valid
-        - Verify resources are bounded
-        - Ensure termination properties
-        """
-        pass
-
-    def llm_translate(self, prompt: str) -> Element:
-        """Translate natural language to XML via LLM
-        
-        TODO: Implement LLM interaction:
-        - Format prompt with XML expectations
-        - Handle LLM response parsing
-        - Validate XML structure
-        """
-        pass
 
 \end{lstlisting}
 
@@ -705,33 +534,7 @@ class Operator:
 %  | { type: 'incompleteTask' };
 %</errors>
 
-class Evaluator:
-    def eval(self, node: Node, env: 'Environment') -> Any:
-        """Evaluate a node in the given environment"""
-        # TODO <dynamic reparsing> if LLM execution fails (typically bc of resource exhaustion or verification failure)
-        # we need to recover by reparsing the AST node into one or more rewritten subtrees 
-        # (i.e. either a new atomic expression or a decomposed, compound expression). See the 
-        # Scheme description to get the general idea. also see <errors>
-        # </dynamic reparsing>
-        if self.is_atomic(node.operator):
-            return self.execute_llm(node.operator, env)
-            
-        # For compound expressions, evaluate args then apply
-        evaluated_args = [self.eval(arg, env) for arg in node.args]
-        return self.apply(node.operator, evaluated_args, env)
-    
-    def is_atomic(self, node: ASTNode) -> bool:
-        """Check if node represents direct LLM execution"""
-        return len(node.args) == 0 and node.operator.type == "atomic"
-    
-    def execute_llm(self, operator: Any, env: 'Environment') -> Any:
-        """Execute atomic task with LLM"""
-        return self.llm_execute(operator.task, env)
-    
-    def apply(self, operator: Any, args: List[Any], env: 'Environment') -> Any:
-        """Apply compound operator to evaluated arguments"""
-        new_env = env.extend(operator.params, args)
-        return self.eval(operator.body, new_env)
+% see evaluator.py
 \end{lstlisting}
 
 Note that the dynamic reparsing is spread out as an interaction between Evaluator and Compiler, but it is conceptually equivalent to this simple expression from the Scheme version: 
