--- a/research.tex
+++ b/research.tex
@@ -275,7 +275,7 @@ ReduceExpression -> Result combination
 These expressions, which can be extended, provide formal semantics for the DSL.
 
 \section{Implementation Plan}
-The implementation strategy builds on recent work and collaborations at SLAC. Working with LCLS beamline scientist Lingjia Liu and Frederic Poitevin from the LCLS analytics group, I developed the previously mentioned analysis approach for charge density wave dynamics in pump-probe experiments. The project aligns with broader LCLS initiatives, led by Jana Thayer and others, to develop real-time analysis capabilities for experimental beamlines.
+The implementation strategy builds on recent work and collaborations at SLAC. Working with LCLS beamline scientist Lingjia Shen and Frederic Poitevin from the LCLS analytics group, I developed the previously mentioned analysis approach for charge density wave dynamics in pump-probe experiments. The project aligns with broader LCLS initiatives, led by Jana Thayer and others, to develop real-time analysis capabilities for experimental beamlines.
 
 Building on these experiences and collaborations, the implementation will proceed in two phases:
 
